app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app-deployment
  namespace: simple-app
  labels:
    app: simple-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
      - name: simple-app
        image: romiari/k8s-demo-app:v2.3
        ports:
        - containerPort: 8020
---
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
  namespace: simple-app
  labels:
    app: simple-app
spec:
  selector:
    app: simple-app
  ports:
    - name: http
      protocol: TCP
      port: 8020
      targetPort: 8020
  type: ClusterIP
