app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app-ingress
  namespace: simple-app
  annotations:
    kubernetes.io/ingress.class: nginx-romo
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: simple-app-encrypt
spec:
  ingressClassName: nginx-romo
  tls:
  - hosts:
    - romiari.me
    - www.romiari.me
    secretName: nginx-ingress-romo
  rules:
    - host: romiari.me
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: simple-app-service
                port:
                  number: 3000
    - host: www.romiari.me
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: simple-app-service
                port:
                  number: 3000
